# baseline

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  load_benchmarks.py  main.py  pyproject.toml  spec.md  test_database.py  test_login.py  test_parser.py
.github/: ISSUE_ONBOARDING.md
backend/: __init__.py
backend/api/: main.py
backend/api/routes/: auth.py  ingest.py  insights.py  onboarding.py  sleep.py
backend/auth/: security.py  users.py
backend/config/: settings.py  sleep_science_config.toml
backend/database/: schema.sql  sleep_db.py
backend/parsers/: __init__.py  healthkit_xml.py  sleep_extractor.py
frontend/: package-lock.json  package.json
frontend/src/lib/api/: client.ts
frontend/src/lib/components/: AppLayout.svelte  EmptyState.svelte  FileUpload.svelte  Skeleton.svelte
frontend/src/lib/components/onboarding/: DataUploadStep.svelte  OnboardingFlow.svelte  ProgressIndicator.svelte  (+4 more)
frontend/src/lib/stores/: auth.ts
frontend/src/lib/styles/: design-system.css
frontend/src/lib/tour/: tour.css  tour.ts  tourSteps.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/data/: +page.svelte
frontend/src/routes/insights/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/methodology/: +page.svelte
frontend/src/routes/onboarding/: +page.svelte
frontend/src/routes/profile/: +page.svelte
frontend/src/routes/sleep/: +page.svelte
test_export/: export_cda.xml
test_export/electrocardiograms/: ecg_2025-11-17.csv
test_export/workout-routes/: route_2025-11-18_2.14pm.gpx
(+2 files in other folders)
