[project]
name = "apple-health-tools"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.2",
    "fastapi>=0.121.3",
    "passlib[bcrypt]>=1.7.4",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
